<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading_view"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg_white"
    android:paddingStart="10dp"
    android:paddingTop="15dp"
    android:paddingEnd="10dp"
    android:paddingBottom="15dp">

    <TextView
        android:id="@+id/tv_name"
        style="@style/black_text_20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/save_record_delete_remind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/white_text_20sp"
        android:layout_width="117dp"
        android:layout_height="51dp"
        android:layout_marginTop="43dp"
        android:background="@drawable/btn_bg_selector_yellow"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <Button
        android:id="@+id/btn_connect"
        style="@style/white_text_20sp"
        android:layout_width="117dp"
        android:layout_height="51dp"
        android:background="@drawable/btn_bg_selector_gay"
        android:text="@string/delete"
        android:textColor="@color/_8E8E8E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>