<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="15dp"
    android:orientation="vertical"
    tools:context=".moudle.breathe.activity.BreatheSettingActivity">

    <TextView
        android:text="@string/breathe_setting"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:onClick="clickRhythm"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@mipmap/icon_rhythm"
            android:layout_width="65dp"
            android:layout_height="65dp"/>

        <TextView
            android:text="@string/breathe_rhythm"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:onClick="clickDuration"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@mipmap/icon_duration"
            android:layout_width="65dp"
            android:layout_height="65dp"/>

        <TextView
            android:text="@string/breathe_duration"
            android:textSize="22sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:background="@mipmap/icon_shock"
            android:layout_width="70dp"
            android:layout_height="70dp"/>

        <TextView
            android:text="@string/breathe_shock"
            android:textSize="24sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>