<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF0000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:background="@mipmap/ic_timer_back"
            android:layout_marginLeft="@dimen/_20dp"
            android:id="@+id/Image_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1.0"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_marginRight="20dp"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tx_time"
            android:text="09:30"
            android:textSize="@dimen/_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/timer_app_name"
            android:textColor="#008AFF"
            android:textSize="@dimen/_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>


    <LinearLayout
        android:layout_marginTop="@dimen/_10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
              android:visibility="invisible"
              android:textColor="@color/blue_a400"
              android:text="@string/timer_hour"
              android:gravity="center"
              android:id="@+id/tx_hour"
              android:layout_weight="1.0"
              android:layout_width="0dp"
              android:layout_height="match_parent"/>

        <TextView
             android:visibility="invisible"
             android:textColor="@color/blue_a400"
             android:text="@string/timer_minute"
             android:gravity="center"
             android:id="@+id/tx_minute"
             android:layout_weight="1.0"
             android:layout_width="0dp"
             android:layout_height="match_parent" />

        <TextView
            android:visibility="invisible"
            android:textColor="@color/blue_a400"
            android:text="@string/timer_second"
            android:gravity="center"
            android:id="@+id/tx_second"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <NumberPicker
          android:textColor="#FFFFFF"
          android:background="@mipmap/ic_timer_unselect"
          android:layout_marginLeft="@dimen/_20sp"
          android:id="@+id/hourpicker"
          android:layout_width="80dp"
          android:layout_height="150dp"/>


      <NumberPicker
          android:background="@mipmap/ic_timer_unselect"
          android:id="@+id/minutepicker"
          android:layout_marginLeft="@dimen/_20dp"
          android:layout_width="80dp"
          android:layout_height="150dp"/>


      <NumberPicker
          android:background="@mipmap/ic_timer_unselect"
          android:id="@+id/secondpicker"
          android:layout_marginLeft="@dimen/_20sp"
          android:layout_width="80dp"
          android:layout_height="150dp"/>

    </LinearLayout>

    <Button
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/bg_timer_start"
        android:id="@+id/btn_ok"
        android:text="@string/timer_start"
        android:textSize="@dimen/_24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>